--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
 </head>
 <body>
 <h1>Grace Hopper</h1>
-<h5>Bio</h5>
-<p>Grace Murray Hopper nacio en Nueva York el 9 de diciembre de 1906 en el seno de una familia en la q las..</p>
+<h3>Bio</h3>
+<p>Grace Murray Hopper nacio en Nueva York el 9 de diciembre de 1906 en el seno de una familia <br>en la que consideraba que los varones y las mujeres debian tener las mismas oportunidades</p>
+<ul>
+	<li>Cocinar</li>
+	<li>programar
+       <ul>
+       	<li>JavaScript</li>
+       	<li>Ruby</li>
+       	<li>java</li>
+       </ul>
+	</li>
+	<li>Enseñar</li>
+</ul>
+<h3>3 sueños que tengo</h3>
+<ul>
+	<li>Viajar por todo el mundo</li>
+	<li>ver a laboraotia por todo el mundo</li>
+	<li>que todos aprendan a codear</li>
+</ul>
 </body>
 </html>
