modifique la informacion

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 	<title>Ejercicio 1</title>
 </head>
 <body>
-<h1>Grace Hopper</h1>
-<h3>Bio</h3>
-<p>Grace Murray Hopper nacio en Nueva York el 9 de diciembre de 1906 en el seno de una familia <br>en la que consideraba que los varones y las mujeres debian tener las mismas oportunidades</p>
+<h1>Constanza Pecori Toloza</h1>
+<h3>Cony</h3>
+<p>nacio en Santiago el 22 de junio de 1990<br>amo a mis gatos </p>
 <ul>
-	<li>Cocinar</li>
-	<li>programar
+	<li>Diseñadora</li>
+	<li>Aprendiendo a programar
        <ul>
        	<li>JavaScript</li>
-       	<li>Ruby</li>
-       	<li>java</li>
+       	<li>HTML</li>
+       	<li>CSS</li>
        </ul>
 	</li>
-	<li>Enseñar</li>
+	<li>Tejedora Compulsiva</li>
 </ul>
 <h3>3 sueños que tengo</h3>
 <ul>
-	<li>Viajar por todo el mundo</li>
-	<li>ver a laboraotia por todo el mundo</li>
-	<li>que todos aprendan a codear</li>
+	<li>Viajar a Europa</li>
+	<li>ser superheroe</li>
+	<li>Aprender a codear</li>
 </ul>
 </body>
 </html>
