--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Constanza Pecori Toloza</h1>
 <h3>Cony</h3>
-<p>nacio en Santiago el 22 de junio de 1990<br>amo a mis gatos </p>
+<p>Naci en Santiago el 22 de junio de 1990, Viví mucho tiempo en coquimbo, el lugar mas lindo para crecer y aprender, volvi por estudios y trabajo de mis padres <br>Amo a mis abuelos y a mi familia entera, sobretodo amo a mis gatos aH! tambien a mi novio xD<br>me gusta comer, dormir, tejer, regalonear, pasear, dibujar, la fotografia y estar con mi familia :3 </p>
 <ul>
 	<li>Diseñadora</li>
 	<li>Aprendiendo a programar
@@ -22,8 +22,10 @@
 <h3>3 sueños que tengo</h3>
 <ul>
 	<li>Viajar a Europa</li>
-	<li>ser superheroe</li>
+	<li>Vivir en Valparaiso</li>
 	<li>Aprender a codear</li>
 </ul>
+<center><img src="miau.jpg" width="300" height="200"></center>
+
 </body>
 </html>
